--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
         "object-curly-newline":"off",
         "class-methods-use-this":"off",
         "no-console":"off",
-        "spaced-comment":"off"
+        "spaced-comment":"off",
+        "arrow-body-style":0
     }
 }
