--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest",
+    "dev-test": "cross-env TEST_DB=testgignal node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,21 +19,28 @@
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/ioredis": "^4.19.4",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.27",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
+    "axios": "^0.21.1",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
-    "typescript": "^4.1.5"
+    "ts-jest": "^26.5.3",
+    "typescript": "^4.1.5",
+    "xmlhttprequest": "^1.8.0"
   },
   "dependencies": {
     "apollo-server-express": "2.19.1",
     "argon2": "^0.27.1",
     "connect-redis": "^5.1.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dataloader": "^2.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
