--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/formidable": "^1.0.32",
+    "@types/graphql-upload": "^8.0.4",
     "@types/ioredis": "^4.19.4",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.27",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "axios": "^0.21.1",
@@ -44,13 +47,16 @@
     "dataloader": "^2.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "formidable": "^1.2.2",
     "graphql": "^15.5.0",
     "graphql-subscriptions": "^1.2.0",
+    "graphql-upload": "^11.0.0",
     "ioredis": "^4.22.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "subscriptions-transport-ws": "^0.9.18",
     "type-graphql": "^1.1.1",
-    "typeorm": "^0.2.31"
+    "typeorm": "^0.2.31",
+    "uuid": "^8.3.2"
   }
 }
