--- a/package.json
+++ b/package.json
@@ -39,14 +39,18 @@
     "xmlhttprequest": "^1.8.0"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.8.1",
     "apollo-server-express": "2.19.1",
     "argon2": "^0.27.1",
+    "cloudinary": "^1.25.0",
     "connect-redis": "^5.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dataloader": "^2.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "firebase-admin": "^9.5.0",
     "formidable": "^1.2.2",
     "graphql": "^15.5.0",
     "graphql-subscriptions": "^1.2.0",
