--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "firebase-admin": "^9.5.0",
     "formidable": "^1.2.2",
     "graphql": "^15.5.0",
+    "graphql-redis-subscriptions": "^2.3.1",
     "graphql-subscriptions": "^1.2.0",
     "graphql-upload": "^11.0.0",
     "ioredis": "^4.22.0",
