--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
+    "build":"tsc",
     "test": "jest",
     "dev-test": "cross-env TEST_DB=testgignal node dist/index.js"
   },
